2013-10-18  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.8 release procedure:
 	Changes since nco-4_3_7: fxm
	cd ~/nco;cvs tag -d nco-4_3_8;cvs tag -d nco-4_3_8-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.8 release"
	cvs tag -c nco-4_3_8;cvs tag -c nco-4_3_8-1

	* Move ncga enum to nces enum and place at end to workaround namespace pollution

2013-10-17  Charlie Zender  <zender@uci.edu>

	* NCO 4.3.7 release procedure:
 	Changes since nco-4_3_6: --mrd, --hdf4, --xml, ncrename groups
	cd ~/nco;cvs tag -d nco-4_3_7;cvs tag -d nco-4_3_7-1
	cd ~/nco;cvs commit -m "Preparing nco-4.3.7 release"
	cvs tag -c nco-4_3_7;cvs tag -c nco-4_3_7-1

2013-10-16 Pedro Vicente  <pvicente@uci.edu>

	* Add ncrename regressions #1 to #21: attributes, dimensions, variables, groups.

2013-10-16  Charlie Zender  <zender@uci.edu>

	* Add --xml_no_location

2013-10-15  Charlie Zender  <zender@uci.edu>

	* Handle control characters slightly better XML mode

	* Add CDL tags <group>, isUnlimited, <values>. XML dumping is mostly complete.

2013-10-10  Charlie Zender  <zender@uci.edu>

	* Document -m -M -H

	* Treat PRN_VAR_DATA as CPY_VAR_DATA in ncks in.nc out.nc

	* Treat PRN_[GLB,VAR]_METADATA as CPY_[GLB,VAR]_METADATA in ncks in.nc out.nc

2013-10-09  Charlie Zender  <zender@uci.edu>

	* Document HDF4, --hdf4 switch

	* Add ncecat regression test of concatenating variables with different IDs

	* Re-add nco_var_mtd_refresh() to ncecat main loop

	* Fix cppcheck error using sng_val_sng as sprintf() parameter and destination

2013-10-08  Charlie Zender  <zender@uci.edu>

	* Clear garbage from stdin with safe method, not fflush(stdin)

	* Close fp_in file resource for MFOs reading fl_in lists from files

	* Received cppcheck static analysis check from dcb314
	Fixed three fprintf() formatting problems, one resource leak, one
	undefined behavior, one misuse of C++ vector .empty(), one
	potential NULL-deference.

2013-10-06  Charlie Zender  <zender@uci.edu>
