@@ -1,10 +1,16 @@
 2013-10-18  Charlie Zender  <zender@uci.edu>
 
+	* Add uthash hash table functionality stubs and nco_uthash.h
+	BSD-licensed code by Troy D. Hanson http://troydhanson.github.com/uthash
+
 	* NCO 4.3.8 release procedure:
  	Changes since nco-4_3_7: fxm
 	cd ~/nco;cvs tag -d nco-4_3_8;cvs tag -d nco-4_3_8-1
 	cd ~/nco;cvs commit -m "Preparing nco-4.3.8 release"
 	cvs tag -c nco-4_3_8;cvs tag -c nco-4_3_8-1
+
+	* Warn about excessive malloc()-size requests.
+	Namespace pollution caused request for 18446744073709551608 B = 16 EB
 
 	* Move ncga enum to nces enum and place at end to workaround namespace pollution
 
